--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "gsap": "^3.11.4",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "split-type": "^0.3.3",
     "typescript": "4.9.5"
   }
 }
