--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react-dom": "18.2.0",
     "split-type": "^0.3.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4"
   }
 }
