--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "dom-to-image": "^2.6.0",
     "gsap": "^3.11.4",
     "next": "13.2.3",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4"
   }
