--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "gsap": "^3.11.4",
+    "html2canvas": "^1.4.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
