--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4"
+    "eslint-config-next": "13.2.4",
+    "file-saver": "^2.0.5"
   }
 }
