--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "gsap": "^3.11.4",
     "html2canvas": "^1.4.1",
+    "iconsax-react": "^0.0.8",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
