--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.9",
     "gsap": "^3.11.4",
     "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
