--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^1.2.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
@@ -18,9 +19,9 @@
     "gsap": "^3.11.4",
     "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "split-type": "^0.3.3",
     "typescript": "4.9.5"
   },
