--- a/package.json
+++ b/package.json
@@ -14,21 +14,15 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "dayjs": "^1.11.9",
-    "gsap": "^3.11.4",
     "html2canvas": "^1.4.1",
     "iconsax-react": "^0.0.8",
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "split-type": "^0.3.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.5",
     "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "file-saver": "^2.0.5"
+    "eslint-config-next": "13.2.4"
   }
 }
