--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "framer-motion": "^11.3.31",
     "iconsax-react": "^0.0.8",
     "next": "^13.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal-sheet": "^3.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
